--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "next-auth": "5.0.0-beta.3",
+    "next-themes": "^0.3.0",
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
