--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/prisma-adapter": "1.0.6",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.11.0",
+    "framer-motion": "^11.1.7",
     "next": "14.1.4",
     "next-auth": "5.0.0-beta.3",
     "next-themes": "^0.3.0",
