--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.11.0",
     "framer-motion": "^11.1.7",
-    "next": "14.1.4",
+    "next": "^14.2.3",
     "next-auth": "5.0.0-beta.3",
     "next-themes": "^0.3.0",
     "prisma": "^5.11.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -28,7 +28,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
