--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgres://postgres.bpjhbiibrstdjnnpuqhx:d3b4t3$t3ch_ff@aws-0-eu-west-2.pooler.supabase.com:5432/postgres"
+
+# Direct connection to the database. Used for migrations.
+DIRECT_URL="postgres://postgres.bpjhbiibrstdjnnpuqhx:d3b4t3$t3ch_ff@aws-0-eu-west-2.pooler.supabase.com:5432/postgres"
